Links and new hello html file.

--- a/hello.html
+++ b/hello.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-    Hello, world!
-    Hey!
-    <a href="hello.html">Click me to go!</a>
+    <p>Hello world!</p>
 </body>
 
 </html>
